infra/apps/workloads/player-data-service/base/core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: player-data-service
  labels:
    app.kubernetes.io/name: player-data-service
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: player-data-service
  ports:
    - name: http
      port: 80
      targetPort: http
